--- a/css/general.css
+++ b/css/general.css
@@ -727,8 +727,33 @@ header .header-righttri {
   border-radius: 7px;
   box-sizing: border-box;
   word-wrap: break-word;
-  box-shadow: 6px 7px 18px 0px rgba(122, 96, 122, 0.66);
+  box-shadow: 6px 7px 18px 4px rgba(122, 96, 122, 0.66);  
+  position: relative;
+  overflow: hidden;
 }
+
+.skills-exp-items figure span{
+  position: absolute;
+  pointer-events: none;
+  background: #708090;            
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  /*opacity: 0.3;*/
+  animation: animate1 0.8s linear;
+}
+
+@keyframes animate1{
+            0%{
+                width: 0;
+                height: 0;
+                opacity: 0.8;
+            }
+            100%{
+                width: 1500px;
+                height: 1500px;
+                opacity: 0;
+            }
+        }
 
 .skills-exp-items figure img {
   width: 50%;
@@ -755,9 +780,9 @@ header .header-righttri {
   width: 100%;
 }
 
-.skills-exp-items figure:hover {
+/*.skills-exp-items figure:hover {
   background: #D3D3D3;
-}
+}*/
 
 .skills-redline {
   width: 0%;
