--- a/css/general.css
+++ b/css/general.css
@@ -916,10 +916,6 @@ header .header-righttri {
   overflow: hidden;
 }
 
-.portfolio-items a figure:hover span {
-  left: 0;
-}
-
 .portfolio-items a figure img {
   max-width: 100%;
   height: auto;
@@ -931,22 +927,34 @@ header .header-righttri {
   margin-top: 15px;
   font-size: 25px;
   color: #4682B4;
-  text-align: center;
+  text-align: center;  
+  position: relative;
+  background: transparent;
+  width: 100%;
+  height: 100%;
+}
+/*Эффект при наведении мышью*/
+.portfolio-items a figure figcaption:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #4682B4;
+  z-index: -1;
+  transition: transform 0.5s;
+  transform-origin: top left;
+  transform: scale(0);
+}
+.portfolio-items a figure:hover figcaption{            
+  color: #fff;
 }
 
-.portfolio-items a figure span {
-  margin-top: 15px;
-  font-size: 25px;
-  background: #4682B4;
-  text-align: center;
-  color: #fff;
-  padding: 10px;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: -1500px;
-  -webkit-transition: left 0.7s ease-in;
-  transition: left 0.7s ease-in;
+.portfolio-items a figure:hover figcaption:before{            
+  transition: transform 0.5s;
+  transform-origin: bottom right;
+  transform: scale(1);
 }
 
 .contacts-line {
