--- a/css/general.css
+++ b/css/general.css
@@ -1073,25 +1073,30 @@ header .header-righttri {
   list-style: none;
   margin-bottom: 25px;
   font-family: 'Jaldi', sans-serif; 
+  position: relative;
 }
 
 .contacts-connect li i {
   margin-right: 10px;
   color: #4169E1;
+  -webkit-transition: 0.4s ease-out;
   transition: 0.5s ease-out;
+  -webkit-transition-delay: 0.4s;
+  transition-delay: 0.4s;
 }
 
 .contacts-connect li span {
   margin-left: 10px;
 }
 
-.contacts-connect li a {
-  position: relative;
+.contacts-connect li a {  
   padding: 8px 20px;
   text-decoration: none;
   color: #000;
-  -webkit-transition: color 0.4s ease-out;
+  -webkit-transition: 0.4s ease-out;
   transition: 0.5s ease-out;
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
 }
 
 
@@ -1104,6 +1109,39 @@ header .header-righttri {
 .contacts-connect li a:hover i{
   color: #fff;
 }
+
+.contacts-connect li a:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 3px solid #4169E1;
+  transition: 0.5s;
+}
+
+.contacts-connect li a:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-right: 3px solid #4169E1;
+  transition: 0.5s;
+}
+
+.contacts-connect li a:hover:before{
+  width: 100%;
+  height: 100%;
+}
+
+.contacts-connect li a:hover:after{
+  width: 100%;
+  height: 100%;
+}
+
 
 .gallery {
   min-height: 400px;
